--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,19 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: create release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: run-${{ github.run_number }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+      - name: change permissions
+        run: exec chmod +x build.sh
+      - name: change permissions
+        run: exec chmod +x update_electron.sh
       - name: create executable
         id: create-executable
-        run: exec npm run build:linux
+        run: exec npm run package
       - name: upload build
         uses: meeDamian/github-release@2.0
         with:
