try add patchname from environment

--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "webgl",
     "electron"
   ],
+  "devDependencies": {
+    "cross-var": "1.1.0",
+    "dotenv-cli": "4.0.0"
+  },
   "scripts": {
     "clean": "rm -rf node_modules/ && rm -rf src/node_modules/ && find src/patches/ -maxdepth 1 -mindepth 1 ! -name default ! -name .gitignore -exec rm -rf {} \\;",
     "start:linux": "electron/linux-x64/electron src/main.js",
     "start:win": "electron/win32-x64/electron src/main.js",
     "start:osx": "electron/darwin-x64/electron src/main.js",
-    "build:linux": "./build.sh linux-x64",
-    "build:osx": "./build.sh darwin-x64",
-    "build:win": "./build.sh win32-x64",
-    "package": "./update_electron.sh 7.1.1 && ./build.sh win32-x64 zip && ./build.sh darwin-x64 zip && ./build.sh linux-x64 zip"
+    "build:linux": "dotenv cross-var ./build.sh linux-x64 nozip %PATCH_NAME%",
+    "build:osx": "dotenv cross-var ./build.sh darwin-x64 nozip %PATCH_NAME%",
+    "build:win": "dotenv cross-var ./build.sh win32-x64 nozip %PATCH_NAME%",
+    "package": "./update_electron.sh 7.1.1 && dotenv cross-var ./build.sh win32-x64 zip %PATCH_NAME% && dotenv cross-var ./build.sh darwin-x64 zip %PATCH_NAME% && dotenv cross-var ./build.sh linux-x64 zip %PATCH_NAME%"
   }
 }
