--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - name: install dependencies
+        run: npm install
       - name: change permissions
         run: exec chmod +x build.sh
       - name: change permissions
         run: exec chmod +x update_electron.sh
+      - name: set version env variable
+        run: |
+          VER=$(cat .env)
+          echo "PATCH_NAME=$PATCH_NAME" >> $GITHUB_ENV
       - name: create executable
         id: create-executable
         run: exec npm run package
@@ -24,6 +30,6 @@ jobs:
           tag: run-${{ github.run_number }}
           gzip: folders
           files: >
-            ./build/patch-win32-x64.zip
-            ./build/patch-darwin-x64.zip
-            ./build/patch-linux-x64.zip
+            ./build/${{ env.VERSION }}-win32-x64.zip
+            ./build/${{ env.VERSION }}-darwin-x64.zip
+            ./build/${{ env.VERSION }}-linux-x64.zip
