put envfile with patch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: set version env variable
         uses: c-py/action-dotenv-to-setenv@v2
         with:
-          env-file: .env
+          env-file: patch/.env
       - name: create executable
         id: create-executable
         run: exec npm run package
