--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "start:win": "electron/win32-x64/electron src/main.js",
     "start:osx": "electron/darwin-x64/electron src/main.js",
     "build:linux": "./build.sh linux-x64",
-    "build:osx": "./build.sh darwin-x64",
+    "build:osx": "./build.sh darwin-x64 && ./build.sh darwin-arm64",
     "build:win": "./build.sh win32-x64",
-    "package": "./update_electron.sh 7.1.1 && ./build.sh win32-x64 zip && ./build.sh darwin-x64 zip && ./build.sh linux-x64 zip"
+    "package": "./update_electron.sh 12.0.2 && ./build.sh win32-x64 zip && ./build.sh darwin-x64 zip && ./build.sh darwin-arm64 zip && ./build.sh linux-x64 zip"
   }
 }
