--- a/patch/package.json
+++ b/patch/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cables-daplaya",
+    "name": "cables-electron",
     "version": "0.2.4",
     "license": "MIT",
     "description": "a standalone player for cables.gl-patches using the electron framework\n",
@@ -12,8 +12,5 @@
         "daplaya",
         "electron"
     ],
-    "main": "main.js",
-    "dependencies": {
-        "adm-zip": "0.4.11"
-    }
+    "main": "main.js"
 }
