--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "electron"
   ],
   "scripts": {
-    "clean": "rm -rf node_modules/ && rm -rf src/node_modules/ && find src/patches/ -maxdepth 1 -mindepth 1 ! -name default ! -name .gitignore -exec rm -rf {} \\;",
+    "clean": "rm -rf node_modules/ && rm -rf patch/node_modules/ && rm -rf build/;",
     "start:linux": "electron/linux-x64/electron src/main.js",
     "start:win": "electron/win32-x64/electron src/main.js",
     "start:osx": "electron/darwin-x64/electron src/main.js",
